{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a07901d6-38d3-4dd1-873e-9133ea8c2048",
            "actions": [
                {
                    "name": "ChangeShape0",
                    "type": "Button",
                    "id": "e04c5560-c084-42c8-b9f0-30c505e15081",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeShape1",
                    "type": "Button",
                    "id": "b541d91b-2b5a-4340-ae4c-63d9e56d0025",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeShape2",
                    "type": "Button",
                    "id": "6e40d70f-9334-450e-8ae5-30c450cd275b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeShape3",
                    "type": "Button",
                    "id": "a8739f56-c822-4796-b766-b3dec5135eca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "87f310af-0c9c-4cb6-9161-169c45f26070",
                    "path": "<Keyboard>/#(I)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "008bbf0d-eb46-4a7b-8ccc-f8527d0db15d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08ac3d26-1894-407c-97b4-1d2358360fdf",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de7ea53-3538-4067-bc9e-d0ecb51026e2",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f85be2a4-2b6b-4635-9539-9cb64b26ea75",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "338dfd74-f682-4768-b09b-a697dec1dbd1",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b191e589-83a5-4f58-b7cc-b75467278ba2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a16422a-003f-4930-8a12-9d7c198555cc",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeShape3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}